--- a/TruLightingUI/TruLightingUI/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/TruLightingUI/TruLightingUI/en.lproj/MainStoryboard_iPhone.storyboard
@@ -97,12 +97,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="u0r-T9-ztD">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HueLightingUnitCell" textLabel="EkG-Kz-yV3" style="IBUITableViewCellStyleDefault" id="u0r-T9-ztD">
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EkG-Kz-yV3">
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </label>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                             </tableViewCell>
@@ -113,6 +120,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Lights" id="pTz-kt-L0E">
+                        <barButtonItem key="leftBarButtonItem" systemItem="refresh" id="50d-I0-Jc3"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="NDe-xa-v7p">
                             <connections>
                                 <segue destination="WON-rE-0ll" kind="modal" id="p37-O4-NdL"/>
@@ -441,9 +449,16 @@
                             <outlet property="delegate" destination="nic-4Z-HG1" id="CBu-MI-ryS"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Hue" id="NXZ-ln-eF4"/>
+                    <navigationItem key="navigationItem" title="Hue" id="NXZ-ln-eF4">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="OqF-8p-qXQ">
+                            <connections>
+                                <segue destination="EmI-jR-Riw" kind="unwind" unwindAction="done:" id="rbt-sQ-r7z"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uyx-nG-4xw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="EmI-jR-Riw" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1518" y="1013"/>
         </scene>
